--- a/Grow.Server/Views/Home/Teams.cshtml
+++ b/Grow.Server/Views/Home/Teams.cshtml
@@ -19,30 +19,30 @@
             max-height: 150px;
         }
 
-        .content h3 {
+        .teams h3 {
             font-size: 100%;
         }
 
-        .content h2 + h3 {
+        .teams h2 + h3 {
             margin-top: -20px;
         }
 
-        .icons {
+        .teams .icons {
             text-align: center;
         }
 
-            .icons img {
+            .teams .icons img {
                 max-height: 30px;
                 margin: 5px 10px;
                 vertical-align: center;
                 opacity: 0.6;
             }
 
-                .icons img:hover {
+                .teams .icons img:hover {
                     opacity: 0.4;
                 }
 
-            .icons a {
+            .teams .icons a {
                 border: 0 !important;
             }
 
@@ -53,6 +53,7 @@
         }
     </style>
 }
+
 <article id="main">
 
     <header class="special container">
@@ -67,99 +68,134 @@
         </h6>
     </header>
 
-    <section id="toc" class="wrapper style4 container">
-        <div class="content">
-            <section>
-                <header>
-                    <h2>Team overview</h2>
-                </header>
-                <b>Winners of @ViewBag.SelectedContestName</b><br />
-                <ul>
-                    @foreach (var prize in Model.Prizes)
-                    {
-                        <li>@prize.Name: <a href="#@prize.Winner.Id">@prize.Winner.Name</a></li>
-                    }
-                </ul>
-                <b>Finalists</b><br />
-                <ul>
-                    @foreach (var team in Model.Teams.Where(t => t.IsActive))
-                    {
-                        <li><a href="#@team.Id">@team.Name</a></li>
-                    }
-                </ul>
-                <b>Drop Outs</b><br />
-                <ul style="font-style: italic; opacity: 0.7;">
-                    @foreach (var team in Model.Teams.Where(t => !t.IsActive))
-                    {
-                        <li><a href="#@team.Id">@team.Name</a></li>
-                    }
-                </ul>
-            </section>
-        </div>
-    </section>
+    @if (Model.Teams.Any())
+    {
+        <section id="toc" class="wrapper style4 container teams">
+            <div class="content">
+                <section>
+                    <header>
+                        <h2>Team overview</h2>
+                    </header>
+                    <b>Winners of @ViewBag.SelectedContestName</b><br />
+                    <ul>
+                        @foreach (var prize in Model.Prizes)
+                        {
+                            <li>@prize.Name: <a href="#@prize.Winner.Id">@prize.Winner.Name</a></li>
+                        }
+                    </ul>
+                    <b>Finalists</b><br />
+                    <ul>
+                        @foreach (var team in Model.Teams.Where(t => t.IsActive))
+                        {
+                            <li><a href="#@team.Id">@team.Name</a></li>
+                        }
+                    </ul>
+                    <b>Drop Outs</b><br />
+                    <ul style="font-style: italic; opacity: 0.7;">
+                        @foreach (var team in Model.Teams.Where(t => !t.IsActive))
+                        {
+                            <li><a href="#@team.Id">@team.Name</a></li>
+                        }
+                    </ul>
+                </section>
+            </div>
+        </section>
 
-    @foreach (var team in Model.Teams)
+        @foreach (var team in Model.Teams)
+        {
+            <section class="wrapper style4 container teams">
+                <div class="content" id="@team.Id">
+                    <div class="row">
+                        <header class="10u 12u(narrower)">
+                            <h2>
+                                @if (string.IsNullOrEmpty(team.WebsiteUrl))
+                                {
+                                    @team.Name
+                                }
+                                else
+                                {
+                                    <a href="@team.WebsiteUrl">@team.Name</a>
+                                }
+                            </h2>
+                            <h3>
+                                @team.MembersAsString
+                                @if (!string.IsNullOrEmpty(team.ActiveSince))
+                                {
+                                    <span>(* @team.ActiveSince)</span>
+                                }
+                            </h3>
+                        </header>
+                        @if (team.LogoImage != null)
+                        {
+                            <div class="2u 12u(narrower)">
+                                <img class="logo" src="@team.LogoImage.Url" />
+                            </div>
+                        }
+                    </div>
+                    <div style="clear: both;"></div>
+                    <p>
+                        @if (team.TeamPhoto != null)
+                        {
+                            <div class="3u 12u(narrower)">
+                                <img class="with-text" src="@team.TeamPhoto.Url" />
+                            </div>
+                        }
+                        @team.Description
+                    </p>
+                    <div style="clear: both;"></div>
+                    <div class="icons">
+                        @if (!string.IsNullOrEmpty(team.WebsiteUrl))
+                        {
+                            <a href="@team.WebsiteUrl">
+                                <img src="/img/icon/www.png" />
+                            </a>
+                        }
+                        @if (!string.IsNullOrEmpty(team.WebsiteUrl))
+                        {
+                            <a href="mailto:@team.Email">
+                                <img src="/img/icon/mail.png" />
+                            </a>
+                        }
+                        @if (!string.IsNullOrEmpty(team.WebsiteUrl))
+                        {
+                            <a href="https://www.facebook.com/@team.FacebookUrl">
+                                <img src="/img/icon/fb.png" />
+                            </a>
+                        }
+                    </div>
+                </div>
+            </section>
+        }
+    }
+    else
     {
         <section class="wrapper style4 container">
-            <div class="content" id="@team.Id">
-                <div class="row">
-                    <header class="10u 12u(narrower)">
-                        <h2>
-                            @if (string.IsNullOrEmpty(team.WebsiteUrl))
-                            {
-                                @team.Name
-                            }
-                            else
-                            {
-                                <a href="@team.WebsiteUrl">@team.Name</a>
-                            }
-                        </h2>
-                        <h3>
-                            @team.MembersAsString
-                            @if (!string.IsNullOrEmpty(team.ActiveSince))
-                            {
-                                <span>(* @team.ActiveSince)</span>
-                            }
-                        </h3>
+            <div class="content">
+                <section style="text-align: center">
+                    <header>
+                        <h3>Stay tuned</h3>
                     </header>
-                    @if (team.LogoImage != null)
-                    {
-                        <div class="2u 12u(narrower)">
-                            <img class="logo" src="@team.LogoImage.Url" />
-                        </div>
+
+                    <p>
+                        No teams have been publicized yet. Check back later for more details or follow us on Social Media:
+                    </p>
+                    <ul class="icons">
+                        <li><a href="https://www.facebook.com/Pioniergarage/">Facebook</a></li>
+                        <li><a href="https://instagram.com/pioniergarage">Instagram</a></li>
+                    </ul>
+                    @{
+                        var lastYear = (ViewBag.ContestYears as ICollection<string>)
+                            .Where(y => y.CompareTo(ViewBag.SelectedContestYear) < 0)
+                            .OrderByDescending(y => y)
+                            .FirstOrDefault();
                     }
-                </div>
-                <div style="clear: both;"></div>
-                <p>
-                    @if (team.TeamPhoto != null)
+                    @if (!string.IsNullOrEmpty(lastYear))
                     {
-                        <div class="3u 12u(narrower)">
-                            <img class="with-text" src="@team.TeamPhoto.Url" />
-                        </div>
+                        <p>
+                            You can also check out @Html.ActionLink("the teams of the last contest", "Program", "Home", new { year = lastYear }).
+                        </p>
                     }
-                    @team.Description
-                </p>
-                <div style="clear: both;"></div>
-                <div class="icons">
-                    @if (!string.IsNullOrEmpty(team.WebsiteUrl))
-                    {
-                        <a href="@team.WebsiteUrl">
-                            <img src="/img/icon/www.png" />
-                        </a>
-                    }
-                    @if (!string.IsNullOrEmpty(team.WebsiteUrl))
-                    {
-                        <a href="mailto:@team.Email">
-                            <img src="/img/icon/mail.png" />
-                        </a>
-                    }
-                    @if (!string.IsNullOrEmpty(team.WebsiteUrl))
-                    {
-                        <a href="https://www.facebook.com/@team.FacebookUrl">
-                            <img src="/img/icon/fb.png" />
-                        </a>
-                    }
-                </div>
+                </section>
             </div>
         </section>
     }
