--- a/Grow.Server/Areas/Admin/Views/Events/Delete.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Delete.cshtml
@@ -78,6 +78,18 @@
             @Html.DisplayFor(model => model.IsMandatory)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ImageId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ImageId)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.HeldById)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.HeldById)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
         <dd>
