--- a/Grow.Server/Areas/Admin/Views/Prizes/Delete.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Prizes/Delete.cshtml
@@ -42,6 +42,18 @@
             @Html.DisplayFor(model => model.Type)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.GivenById)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.GivenById)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.WinnerId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.WinnerId)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
         <dd>
