--- a/Grow.Server/Areas/Admin/Views/Teams/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Teams/Details.cshtml
@@ -71,6 +71,24 @@
             @Html.DisplayFor(model => model.MembersAsString)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.LogoImageId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.LogoImageId)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.TeamPhotoImageId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.TeamPhotoImageId)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.HasDroppedOut)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.HasDroppedOut)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
         <dd>
