--- a/Grow.Server/Areas/Admin/Views/Contests/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Contests/Details.cshtml
@@ -29,6 +29,12 @@
             @Html.DisplayFor(model => model.Language)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.RegistrationUrl)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.RegistrationUrl)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
         <dd>
