--- a/Grow.Server/Areas/Admin/Views/Events/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Create.cshtml
@@ -59,6 +59,16 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ImageId" class="control-label"></label>
+                <input asp-for="ImageId" class="form-control" />
+                <span asp-validation-for="ImageId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="HeldById" class="control-label"></label>
+                <input asp-for="HeldById" class="form-control" />
+                <span asp-validation-for="HeldById" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Visibility" class="control-label"></label>
                 <select asp-for="Visibility" asp-items="ViewBag.Visibilities" class="form-control"></select>
                 <span asp-validation-for="Visibility" class="text-danger"></span>
