--- a/Grow.Server/Areas/Admin/Views/Events/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Details.cshtml
@@ -76,6 +76,15 @@
         <dd>
             @Html.DisplayFor(model => model.IsMandatory)
         </dd>
+        <dd>
+            @Html.DisplayFor(model => model.ImageId)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.HeldById)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.HeldById)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
