--- a/Grow.Server/Areas/Admin/Views/Events/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Edit.cshtml
@@ -48,6 +48,16 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ImageId" class="control-label"></label>
+                <input asp-for="ImageId" class="form-control" />
+                <span asp-validation-for="ImageId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="HeldById" class="control-label"></label>
+                <input asp-for="HeldById" class="form-control" />
+                <span asp-validation-for="HeldById" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Visibility" class="control-label"></label>
                 <select asp-for="Visibility" asp-items="ViewBag.Visibilities" class="form-control"></select>
                 <span asp-validation-for="Visibility" class="text-danger"></span>
@@ -78,6 +88,7 @@
                     </label>
                 </div>
             </div>
+            <input type="hidden" asp-for="ContestId" />
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
