--- a/Grow.Server/Areas/Admin/Views/Organizers/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Organizers/Details.cshtml
@@ -35,6 +35,12 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ImageId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ImageId)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
         <dd>
