--- a/Grow.Server/Areas/Admin/Views/Partners/Delete.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Partners/Delete.cshtml
@@ -24,6 +24,12 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ImageId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ImageId)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
         <dd>
