--- a/Grow.Server/Areas/Admin/Views/Prizes/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Prizes/Edit.cshtml
@@ -33,6 +33,16 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="WinnerId" class="control-label"></label>
+                <input asp-for="WinnerId" class="form-control" />
+                <span asp-validation-for="WinnerId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="GivenById" class="control-label"></label>
+                <input asp-for="GivenById" class="form-control" />
+                <span asp-validation-for="GivenById" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
                 <select asp-for="Type" asp-items="ViewBag.Types" class="form-control"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
@@ -44,6 +54,7 @@
                     </label>
                 </div>
             </div>
+            <input type="hidden" asp-for="ContestId" />
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
