--- a/Grow.Server/Areas/Admin/Views/Teams/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Teams/Edit.cshtml
@@ -28,6 +28,16 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="LogoImageId" class="control-label"></label>
+                <input asp-for="LogoImageId" class="form-control" />
+                <span asp-validation-for="LogoImageId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TeamPhotoImageId" class="control-label"></label>
+                <input asp-for="TeamPhotoImageId" class="form-control" />
+                <span asp-validation-for="TeamPhotoImageId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ActiveSince" class="control-label"></label>
                 <input asp-for="ActiveSince" class="form-control" />
                 <span asp-validation-for="ActiveSince" class="text-danger"></span>
@@ -60,10 +70,18 @@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
+                        <input asp-for="HasDroppedOut" /> @Html.DisplayNameFor(model => model.HasDroppedOut)
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
                         <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                     </label>
                 </div>
             </div>
+            <input type="hidden" asp-for="ContestId" />
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
